TA: Move styles to separate file

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -5,144 +5,7 @@
         <title>Käännä suomi-venäjä</title>
         <script type="text/javascript" src="data.js"> </script>
         <script type="text/javascript" src="index.js"> </script>
-        <style>
-            body {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            #root {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1em;
-
-                padding: 2%;
-                width: 75%;
-                border-radius: 3px;
-                box-shadow: 2px 2px 2px 0 gray;
-                background-color: lightgray;
-            }
-
-            #inputArea {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 0.5em;
-            }
-
-            #inputArea > p:first-child {
-                margin-top: 0;
-            }
-
-            #keyboardArea {
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-            }
-
-            #keyboardArea > div {
-                display: flex;
-                flex-direction: row;
-                gap: 5px;
-            }
-
-            button {
-                width: 60px;
-                height: 60px;
-                font-size: 20px;
-                margin: 0;
-
-                box-shadow: 1px 1px 1px 0 black;
-            }
-
-            /* Size and move the keys to match a real keyboard. */
-
-            /* Backspace. */
-            #keyboardArea > div:nth-child(1) > button:last-child {
-                margin-left: 130px;
-                width: 120px;
-            }
-
-            /* Tab. */
-            #keyboardArea > div:nth-child(2) > button:first-child {
-                width: 90px;
-            }
-
-            /* Enter. */
-            #keyboardArea > div:nth-child(2) > button:last-child {
-                width: 90px;
-            }
-
-            /* Capslock. */
-            #keyboardArea > div:nth-child(3) > button:first-child {
-                width: 110px;
-            }
-
-            /* Left shift. */
-            #keyboardArea > div:nth-child(4) > button:first-child {
-                width: 80px;
-            }
-
-            /* Key right of less than -key. */
-            #keyboardArea > div:nth-child(4) > button:nth-child(2) {
-                margin-left: 65px;
-            }
-
-            /* Right shift. */
-            #keyboardArea > div:nth-child(4) > button:nth-child(12) {
-                width: 100px;
-            }
-
-            /* Space. */
-            #keyboardArea > div:nth-child(5) > button:first-child {
-                margin-left: 245px;
-                width: 400px;
-            }
-
-            /* Left-arrow. */
-            #keyboardArea > div:nth-child(5) > button:nth-child(2) {
-                margin-left: 125px;
-            }
-
-            /* Right-arrow. */
-            #keyboardArea > div:nth-child(5) > button:nth-child(3) {
-                margin-left: 65px;
-            }
-
-            /* Dynamically changing styles. */
-
-            .button-active {
-                filter: brightness(85%);
-            }
-
-            .error {
-                color: red;
-            }
-
-            .hidden {
-                display: none;
-            }
-
-            /* Styling both languages' characters on the keys. */
-            .targetLang {
-                position: relative;
-                font-size: 110%;
-                bottom: 40%;
-                padding-right: 40%;
-            }
-
-            .sourceLang {
-                position: relative;
-                font-size: 90%;
-                color: gray;
-                bottom: -45%;
-                padding-left: 40%;
-            }
-        </style>
-        <script type="text/javascript">
-        </script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="root">
