--- a/kielet/index.html
+++ b/kielet/index.html
@@ -10,10 +10,14 @@
     <body>
         <div id="root">
             <div id="inputArea">
-                <p id="wordText"></p>
-                <p id="instructionText">По-русски:</p>
+                <label for="wordText">Suomeksi</label>
+                <input id="wordText" type="text" disabled/>
+                <p id="arrow">►</p>
+                <label for="answerInput">По-русски</label>
                 <input id="answerInput" type="text"/>
-                <p id="pointsText"></p>
+                <div id="pointsText">
+                    <p></p>
+                </div>
             </div>
             <div id="keyboardArea">
                 <div>
