--- a/kielet/index.html
+++ b/kielet/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Käännä suomi-venäjä</title>
         <script type="text/javascript" src="data.js"> </script>
         <script type="text/javascript" src="index.js"> </script>
