TA: Add history of points

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <label for="pointsText">Точки</label>
-                    <input class="pointsField" id="pointsText" type="text" readonly/>
+                    <input class="pointsField" id="pointsText" type="text" value="0p" readonly/>
                 </div>
             </div>
             <div class="inputArea">
