TA: Add word history

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -13,11 +13,11 @@
             <div class="inputArea">
                 <div>
                     <label for="wordText">Suomeksi</label>
-                    <input id="wordText" type="text" readonly/>
+                    <input class="wordField" id="wordText" type="text" readonly/>
                 </div>
                 <div>
                     <label for="answerInput">По-русски</label>
-                    <input id="answerInput" type="text"/>
+                    <input class="answerField" id="answerInput" type="text"/>
                 </div>
                 <div>
                     <label for="pointsText">Точки</label>
